--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,6 @@
 eclipse.preferences.version=1
+encoding//src/main/java/servlet/AreaServlet.java=UTF-8
+encoding//src/main/java/servlet/BMIHttpServlet.java=UTF-8
 encoding//src/main/java/servlet/LuckyNumberServlet.java=UTF-8
 encoding//src/main/java/servlet/TimeStampServlet.java=UTF-8
+encoding//src/main/java/servlet/TodayServlet.java=UTF-8
