--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,16 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- 建立 TodayServlet 實體 -->
+  <servlet>
+  	<servlet-name>TodayServlet</servlet-name>  
+  	<servlet-class>servlet.TodayServlet</servlet-class>  	
+  </servlet>
+  <!-- 設定 TodayServlet url-pattern -->
+  <servlet-mapping>
+  	<servlet-name>TodayServlet</servlet-name>
+  	<url-pattern>/servlet/TodayServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
