--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,4 +21,36 @@
   	<url-pattern>/servlet/TodayServlet</url-pattern>
   </servlet-mapping>
   
+  <!-- 建立過濾器 -->
+  <filter>
+  	<filter-name>AreaFilterA</filter-name>
+  	<filter-class>filter.AreaFilterA</filter-class>  
+  </filter>
+  
+  <filter>
+  	<filter-name>AreaFilterB</filter-name>
+  	<filter-class>filter.AreaFilterB</filter-class>  
+  </filter>
+  
+  <filter>
+  	<filter-name>AreaFilterC</filter-name>
+  	<filter-class>filter.AreaFilterC</filter-class>  
+  </filter>
+  
+  <!-- 配置過濾器 -->
+  <filter-mapping>
+  	<filter-name>AreaFilterC</filter-name>
+  	<url-pattern>/servlet/area</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>AreaFilterB</filter-name>
+  	<url-pattern>/servlet/area</url-pattern>
+  </filter-mapping>
+  
+  <filter-mapping>
+  	<filter-name>AreaFilterA</filter-name>
+  	<url-pattern>/servlet/area</url-pattern>
+  </filter-mapping>
+  
 </web-app>
