--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
+  <session-config>
+  	<session-timeout>1</session-timeout>
+  </session-config>
+  
   <!-- 建立 TodayServlet 實體 -->
   <servlet>
   	<servlet-name>TodayServlet</servlet-name>  
